rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__expr_dim_lower.snap
---
source: cubesqlplanner/src/tests/integration/member_expressions.rs
expression: result
---
lower_status | orders__count
-------------+--------------
completed    | 5            
pending      | 3            
cancelled    | 1
