rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__expr_dim_upper_city.snap
---
source: cubesqlplanner/src/tests/integration/member_expressions.rs
expression: result
---
upper_city    | orders__count
--------------+--------------
NEW YORK      | 4            
NULL          | 2            
SAN FRANCISCO | 2            
BOSTON        | 1
