rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__expr_measure_count_star_no_hints_beside_multi_stage_measure.snap
---
source: cubesqlplanner/src/tests/integration/member_expressions.rs
expression: result
---
orders_view__amount_share | total_count
--------------------------+------------
1.1956521739130435        | 8          
6.1111111111111111        | 8
