rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__expr_measure_count_star_no_hints_on_multi_fact_view.snap
---
source: cubesqlplanner/src/tests/integration/member_expressions.rs
expression: result
---
customer_overview__orders_count | customer_overview__returns_count | total_count
--------------------------------+----------------------------------+------------
8                               | 5                                | 13
