rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__expr_measure_count_star_no_hints_on_view.snap
---
source: cubesqlplanner/src/tests/integration/member_expressions.rs
expression: result
---
distinct_status | total_count
----------------+------------
2               | 8
