rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__expr_measure_count_star_only_member_on_view_with_join_map.snap
---
source: cubesqlplanner/src/tests/integration/member_expressions.rs
expression: result
---
total_count
-----------
4
