rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__expr_measure_sum.snap
---
source: cubesqlplanner/src/tests/integration/member_expressions.rs
expression: result
---
sum_amount
----------
1440.00
