rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__member_expressions__multiplied_dim_only_me_measure.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/member_expressions.rs
assertion_line: 176
expression: result
---
orders__status | orders__count | city_max     
---------------+---------------+--------------
completed      | 5             | San Francisco
pending        | 3             | San Francisco
cancelled      | 1             | NULL
